js262/test/language/module-code/export-default-function-declaration-binding-exists.js


/*---
description: >
  ExportDeclaration : HoistableDeclaration : FunctionDeclaration
  esid: prod-HoistableDeclaration
info: |
  ExportDeclaration :
    HoistableDeclaration[Yield, Await, Default]:

  HoistableDeclaration[Yield, Await, Default]:
    FunctionDeclaration[?Yield, ?Await, ?Default]

flags: [module]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

class F {}
export default function F() {}

